--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,11 @@
     "type": "claroline-plugin",
     "license": "GPL-3.0+",
     "require": {
-        "php": ">=5.4.1",
+        "php": ">=5.5",
         "claroline/core-bundle": "~6.0",
         "knplabs/knp-snappy-bundle": "1.3"
     },
     "autoload": {
-        "psr-0": { "Claroline\\PdfGenerator": "" }
-    },
-    "target-dir": "Claroline/PdfGeneratorBundle"
+        "psr-4": { "Claroline\\PdfGenerator\\": "" }
+    }
 }
