--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,6 @@
         "knplabs/knp-snappy-bundle": "1.3"
     },
     "autoload": {
-        "psr-4": { "Claroline\\PdfGenerator\\": "" }
+        "psr-4": { "Claroline\\PdfGeneratorBundle\\": "" }
     }
 }
